--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,7 +30,7 @@ application.langs="en"
 
 db {
   default.driver = org.h2.Driver
-  default.url = "jdbc:h2:/path/to/db-file"
+  default.url = "jdbc:h2:mem:play"
 }
 
 # Evolutions
